--- a/index.html
+++ b/index.html
@@ -43,9 +43,25 @@
         <script src="data/IND_adm2_4.js"></script>
         <script src="data/IND_adm3_5.js"></script>
         <script>
-        var map = L.map('map', {
-            zoomControl:true, maxZoom:26, minZoom:1
-        })
+            var lat;
+            var lon;
+            var zoomLevel;
+
+            // Initialize the map
+            var map = L.map('map', {
+                zoomControl: true,
+                maxZoom: 26,
+                minZoom: 1
+            }).setView([lat, lon], zoomLevel);
+
+            // Add click event handler
+            map.on('click', function(e) {
+                var lat = e.latlng.lat;
+                var lng = e.latlng.lng;
+                alert("You clicked the map at latitude: " + lat + " and longitude: " + lng);
+            });
+
+
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
